business processes responsiveness done

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,6 +46,9 @@
     @media (max-width: $breakpoint-tablet) {
       font-size: 40px;
     }
+    @media (max-width: $breakpoint-mobile) {
+      font-size: 35px;
+    }
   }
 
   & p {
