--- a/src/styles/modules/_business.scss
+++ b/src/styles/modules/_business.scss
@@ -1,8 +1,9 @@
 .business {
+  overflow-x: hidden;
   & .section-two {
     //   border: 2px solid red;
     min-height: 400px;
-    padding: 80px 0;
+    padding: 80px 40px;
     z-index: 3;
     background: white;
 
@@ -22,6 +23,15 @@
       text-transform: capitalize;
       line-height: 1.2;
       color: black;
+
+      @media (max-width: $breakpoint-large) {
+        width: 70%;
+        font-size: 0.9rem;
+      }
+      @media (max-width: $breakpoint-tablet) {
+        width: 80%;
+        font-size: 0.7rem;
+      }
     }
 
     & .content {
@@ -29,6 +39,14 @@
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 30px;
+
+      @media (max-width: $breakpoint-large) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      @media (max-width: $breakpoint-tablet) {
+      }
 
       & .business-item {
         border: 1px solid var(--primary-blue);
@@ -41,16 +59,43 @@
         position: relative;
         z-index: 3;
 
+        @media (max-width: $breakpoint-large) {
+          padding: 18px 13px;
+          width: 200px;
+        }
+        @media (max-width: $breakpoint-tablet) {
+          padding: 16px 11px;
+          width: 150px;
+        }
+        @media (max-width: $breakpoint-mobile) {
+          padding: 16px 11px;
+          width: 280px;
+        }
+
         & span {
           font-size: 40px;
           color: var(--primary-blue);
           z-index: 3;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 35px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 30px;
+          }
         }
 
         & p {
           z-index: 3;
           width: 100%;
           color: black;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 0.9rem;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 0.7rem;
+          }
         }
 
         &:before {
@@ -91,7 +136,7 @@
     gap: 60px;
     // justify-content: center;
     align-items: center;
-    padding: 100px 0;
+    padding: 100px 40px;
     background-size: cover;
     position: relative;
 
@@ -106,7 +151,8 @@
     }
 
     & .heading {
-      width: var(--width-standard);
+      // width: var(--width-standard);
+      width: 100%;
       z-index: 3;
     }
 
@@ -115,6 +161,19 @@
       & img {
         height: 600px;
         width: 900px;
+
+        @media (max-width: $breakpoint-large) {
+          height: 400px;
+          width: 700px;
+        }
+        @media (max-width: $breakpoint-tablet) {
+          height: 350px;
+          width: 500px;
+        }
+        @media (max-width: $breakpoint-mobile) {
+          height: 300px;
+          width: 400px;
+        }
       }
     }
   }
@@ -122,7 +181,7 @@
   & .section-four {
     background: white;
     color: black;
-    padding: 60px 0;
+    padding: 60px 40px;
     display: flex;
     flex-direction: column;
     gap: 90px;
@@ -148,6 +207,13 @@
         & h2 {
           font-size: 30px;
           color: var(--primary-blue-200);
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 25px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 20px;
+          }
         }
 
         & ul {
@@ -159,11 +225,24 @@
           & li {
             font-size: 20px;
             text-align: justify;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 18px;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 14px;
+            }
+            @media (max-width: $breakpoint-mobile) {
+              font-size: 12px;
+            }
           }
         }
       }
 
       & .right {
+        @media (max-width: $breakpoint-large) {
+          display: none;
+        }
         & img {
           height: 390px;
           width: 540px;
