--- a/src/styles/modules/_navbar.scss
+++ b/src/styles/modules/_navbar.scss
@@ -5,13 +5,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 999;
-  padding: 0px 40px;
 
   @media (max-width: $breakpoint-tablet) {
   }
@@ -23,15 +21,20 @@
     height: 100%;
     // border: 2px solid blue;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    padding: 0px 40px;
+    position: relative;
+
+    @media (max-width: $breakpoint-tablet) {
+      justify-content: space-between;
+    }
 
     & img {
       height: 60px;
       width: 200px;
-      // background: white;
       padding: 5px 10px;
       box-sizing: content-box;
+      cursor: pointer;
 
       @media (max-width: $breakpoint-large) {
         height: 50px;
@@ -47,9 +50,20 @@
       display: flex;
       gap: 30px;
       // border: 2px solid red;
+      width: 100%;
+      justify-content: center;
 
       @media (max-width: $breakpoint-tablet) {
-        display: none;
+        // display: none;
+        position: absolute;
+        top: 72px;
+        left: 0;
+        width: 100%;
+        height: 0px;
+        background: var(--primary-blue);
+        flex-direction: column;
+        padding: 0 40px;
+        transition: var(--transition);
       }
 
       & .item {
@@ -59,11 +73,18 @@
         transition: var(--transition);
         font-size: 1rem;
         font-weight: 600;
-        line-height: 90px;
+        // line-height: 90px;
         color: white;
+        // border: 2px solid blue;
+        width: fit-content;
 
         @media (max-width: $breakpoint-large) {
           font-size: 0.8rem;
+        }
+        @media (max-width: $breakpoint-tablet) {
+          transform: translateX(-100px);
+          opacity: 0;
+          transition: var(--transition);
         }
 
         &:hover {
@@ -71,9 +92,31 @@
           transition: var(--transition);
         }
       }
+
+      & .active {
+        color: var(--primary-blue-200);
+      }
+    }
+    @media (max-width: $breakpoint-tablet) {
+      & .nav-active {
+        height: 400px;
+        transition: var(--transition);
+
+        & .item {
+          transform: translateX(0);
+          opacity: 1;
+          transition: var(--transition);
+        }
+      }
     }
 
     & span {
+      display: none;
+
+      @media (max-width: $breakpoint-tablet) {
+        display: flex;
+      }
+
       & svg {
         height: 2rem;
         width: 2rem;
@@ -103,6 +146,14 @@
     & .links {
       & .item {
         color: var(--primary-blue);
+
+        @media (max-width: $breakpoint-tablet) {
+          color: white;
+        }
+      }
+
+      & .active {
+        color: var(--primary-blue-200);
       }
     }
 
