--- a/src/styles/modules/_section-two.scss
+++ b/src/styles/modules/_section-two.scss
@@ -195,8 +195,9 @@
             }
           }
 
-          button {
+          & a {
             font-size: 16px;
+            text-decoration: none;
             color: var(--primary-blue);
             // border: 2px solid var(--primary-blue-200);
             border: none;
