contact page in progress

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import "./modules/services";
 @import "./modules/business";
 @import "./modules/resources";
+@import "./modules/contact";
 
 .page-header {
   min-height: 430px;
