--- a/src/styles/modules/_resources.scss
+++ b/src/styles/modules/_resources.scss
@@ -390,6 +390,16 @@
               display: flex;
               gap: 30px;
               align-items: center;
+
+              & span {
+                padding: 6px 8px;
+                // background: rgb(225, 238, 240);
+                background: var(--primary-blue);
+                border-radius: 3px;
+                color: white;
+                width: 15%;
+                // border: 1px solid var(--primary-blue);
+              }
             }
 
             & p {
@@ -408,6 +418,7 @@
               & span {
                 background: none;
                 color: var(--primary-blue);
+                padding: none;
               }
 
               @media (max-width: $breakpoint-large) {
@@ -422,17 +433,22 @@
               // border: 1px solid red;
             }
 
-            & span {
-              padding: 6px 8px;
-              // background: rgb(225, 238, 240);
-              background: var(--primary-blue);
-              border-radius: 3px;
-              color: white;
-              width: 15%;
-              // border: 1px solid var(--primary-blue);
-            }
-
             & .button {
+              display: flex;
+              gap: 20px;
+              align-items: center;
+
+              & label {
+                cursor: pointer;
+              }
+
+              & input {
+                border: 1px solid var(--primary-blue);
+                background: transparent;
+                width: fit-content;
+                opacity: 0;
+                display: none;
+              }
               & button {
                 border: none;
                 width: fit-content;
