--- a/src/styles/modules/_resources.scss
+++ b/src/styles/modules/_resources.scss
@@ -1,5 +1,6 @@
 .resources {
   overflow-x: hidden;
+  position: relative;
   & .section-one {
     // border: 2px solid red;
     background: white;
@@ -429,27 +430,12 @@
               }
             }
 
-            & .length {
-              // border: 1px solid red;
-            }
-
             & .button {
               display: flex;
               gap: 20px;
               align-items: center;
 
-              & label {
-                cursor: pointer;
-              }
-
-              & input {
-                border: 1px solid var(--primary-blue);
-                background: transparent;
-                width: fit-content;
-                opacity: 0;
-                display: none;
-              }
-              & button {
+              & .label {
                 border: none;
                 width: fit-content;
                 padding: 10px 20px;
@@ -464,6 +450,34 @@
                   background: var(--primary-blue);
                   transition: var(--transition);
                   color: white;
+                }
+              }
+
+              & input {
+                border: 1px solid var(--primary-blue);
+                background: transparent;
+                width: fit-content;
+                opacity: 0;
+                display: none;
+              }
+              & .upload-button {
+                border: none;
+                width: fit-content;
+                // padding: 10px 20px;
+                // border: 1px solid var(--primary-blue);
+                // font-size: 15px;
+                // background: transparent;
+                // border-radius: 15px;
+                transition: var(--transition);
+                text-transform: uppercase;
+                font-weight: 700;
+
+                &:hover {
+                  cursor: pointer;
+                  // background: var(--primary-blue);
+                  transition: var(--transition);
+                  // color: white;
+                  opacity: 0.5;
                 }
               }
             }
@@ -606,6 +620,52 @@
             }
           }
         }
+      }
+    }
+  }
+
+  & .upload-file {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(128, 128, 128, 0.65);
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & .content-center {
+      background: white;
+      min-width: 50%;
+      min-height: 50%;
+      max-height: 80%;
+      overflow-y: scroll;
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      position: relative;
+
+      & p,
+      h2 {
+        display: flex;
+        justify-content: space-between;
+
+        & span {
+          cursor: pointer;
+          text-transform: capitalize;
+        }
+      }
+
+      & .close {
+        position: absolute;
+        top: 7px;
+        right: 20px;
+        color: red;
+        cursor: pointer;
+        font-size: 30px;
       }
     }
   }
