--- a/src/styles/modules/_contact.scss
+++ b/src/styles/modules/_contact.scss
@@ -17,6 +17,11 @@
       margin: 0 auto;
       display: grid;
       grid-template-columns: 1fr 1fr;
+      padding: 0 40px;
+
+      @media (max-width: $breakpoint-tablet) {
+        grid-template-columns: 1fr;
+      }
 
       & .left {
         // width: 50%;
@@ -31,6 +36,12 @@
         & h2 {
           font-size: 43px;
           // text-transform: capitalize;
+          @media (max-width: $breakpoint-large) {
+            font-size: 35px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 30px;
+          }
         }
 
         & p {
@@ -38,15 +49,27 @@
           font-size: 18px;
           width: 80%;
           line-height: 30px;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 16px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 13px;
+          }
         }
       }
 
       & .right {
         // background: white;
-        width: 700px;
+        // width: 700px;
+        width: 50%;
         position: absolute;
         right: 0;
         top: 0;
+
+        @media (max-width: $breakpoint-tablet) {
+          display: none;
+        }
         & img {
           height: 575px;
           width: 100%;
@@ -77,6 +100,10 @@
       gap: 40px;
       justify-content: center;
 
+      @media (max-width: $breakpoint-tablet) {
+        flex-direction: column;
+      }
+
       & .item {
         border: 1px solid rgb(209, 211, 212);
         min-height: 250px;
@@ -90,13 +117,31 @@
         // justify-content: center;
         padding: 40px;
 
+        @media (max-width: $breakpoint-tablet) {
+          width: 100%;
+        }
+
         & span {
           font-size: 45px;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 40px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 35px;
+          }
         }
 
         & h3 {
           text-transform: capitalize;
           font-size: 20px;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 18px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 16px;
+          }
         }
 
         & p {
@@ -104,6 +149,13 @@
           text-transform: capitalize;
           text-align: center;
           line-height: 30px;
+
+          @media (max-width: $breakpoint-large) {
+            font-size: 13px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            font-size: 11px;
+          }
         }
 
         & .phone {
@@ -122,6 +174,17 @@
           transition: var(--transition);
           border: 1px solid var(--primary-blue);
 
+          @media (max-width: $breakpoint-large) {
+            border-radius: 10px;
+            padding: 15px 20px;
+            font-size: 13px;
+          }
+          @media (max-width: $breakpoint-tablet) {
+            border-radius: 8px;
+            padding: 13px 18px;
+            font-size: 11px;
+          }
+
           &:hover {
             background: white;
             border: 1px solid var(--primary-blue);
@@ -135,23 +198,41 @@
     & h2 {
       text-align: center;
       font-size: 35px;
+
+      @media (max-width: $breakpoint-large) {
+        font-size: 30px;
+      }
+      @media (max-width: $breakpoint-tablet) {
+        font-size: 25px;
+      }
     }
 
     & .map-center {
+      // margin: 0 80px;
       display: grid;
       grid-template-columns: 65% 30%;
       gap: 40px;
-      width: var(--width-standard);
+      // width: var(--width-standard);
+      width: 80%;
       margin: 35px auto;
       background-color: #f6f9fc;
       border-radius: 0.1875rem;
       box-shadow: 0 1px 5px 0 rgba(33, 51, 67, 0.12);
+
+      @media (max-width: $breakpoint-tablet) {
+        grid-template-columns: 100%;
+      }
 
       & .desc {
         display: flex;
         flex-direction: column;
         padding: 30px 0;
         gap: 30px;
+        // border: 2px solid red;
+
+        @media (max-width: $breakpoint-tablet) {
+          padding: 30px;
+        }
 
         & .desc-item {
           display: flex;
@@ -160,6 +241,13 @@
 
           & h2 {
             font-size: 25px;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 20px;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 18px;
+            }
           }
 
           & .address {
@@ -167,6 +255,13 @@
             flex-direction: column;
             gap: 20px;
             font-size: 15px;
+
+            @media (max-width: $breakpoint-large) {
+              font-size: 13px;
+            }
+            @media (max-width: $breakpoint-tablet) {
+              font-size: 11px;
+            }
           }
         }
       }
