--- a/src/styles/modules/_contact.scss
+++ b/src/styles/modules/_contact.scss
@@ -166,7 +166,9 @@
           border: none;
           padding: 20px 25px;
           background: var(--primary-blue);
-          border-radius: 15px;
+          border-radius: 0.25rem;
+          border-bottom-left-radius: 1rem;
+          border-top-right-radius: 1rem;
           color: white;
           text-transform: capitalize;
           font-size: 15px;
@@ -175,12 +177,12 @@
           border: 1px solid var(--primary-blue);
 
           @media (max-width: $breakpoint-large) {
-            border-radius: 10px;
+            // border-radius: 10px;
             padding: 15px 20px;
             font-size: 13px;
           }
           @media (max-width: $breakpoint-tablet) {
-            border-radius: 8px;
+            // border-radius: 8px;
             padding: 13px 18px;
             font-size: 11px;
           }
@@ -198,6 +200,7 @@
     & h2 {
       text-align: center;
       font-size: 35px;
+      text-transform: capitalize;
 
       @media (max-width: $breakpoint-large) {
         font-size: 30px;
