--- a/src/styles/modules/_resources.scss
+++ b/src/styles/modules/_resources.scss
@@ -586,6 +586,14 @@
                 & .delete-icon {
                   font-size: 30px;
                 }
+
+                & a {
+                  color: var(--primary-blue);
+                  text-decoration: none;
+                  cursor: pointer;
+                  text-transform: capitalize;
+                  font-size: 15px;
+                }
               }
             }
 
