--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,7 @@ body {
 :root {
   --primary-blue: #15284a; /*rgb(21, 40, 74)*/
   --primary-blue-100: #09aff4;
-  --primary-blue-200: #5b9bd5;
+  --primary-blue-200: #38b6ff;
   --primary-blue-300: #2a6fc9; /*rgb(42, 111, 201)*/
   --primary-blue-400: rgb(67, 89, 114);
   --secondary-grey: #a4a4a4;
