--- a/src/styles/modules/_about.scss
+++ b/src/styles/modules/_about.scss
@@ -215,7 +215,7 @@
         // border: 2px solid blue;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
 
         & h3 {
           font-size: 16px;
@@ -363,7 +363,7 @@
     background: white;
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 30px;
     padding: 40px 40px 80px;
     background: var(--padding-blue);
 
@@ -383,7 +383,7 @@
       & .left {
         display: flex;
         flex-direction: column;
-        gap: 50px;
+        gap: 30px;
         // justify-content: space-between;
 
         & p {
@@ -465,7 +465,7 @@
       padding: 100px 40px;
       display: flex;
       flex-direction: column;
-      gap: 40px;
+      gap: 20px;
       margin: 0 auto;
     }
 
@@ -528,29 +528,29 @@
           transition: transform 0.5s ease 0s;
         }
 
-        &:hover {
-          & h2 {
-            color: var(--primary-blue);
-          }
-          & span {
-            // transform: translateZ(10px);
-            background: var(--primary-blue);
-            transform: rotateY(180deg);
-          }
+        // &:hover {
+        //   & h2 {
+        //     color: var(--primary-blue);
+        //   }
+        //   & span {
+        //     // transform: translateZ(10px);
+        //     background: var(--primary-blue);
+        //     transform: rotateY(180deg);
+        //   }
 
-          & hr {
-            background: var(--primary-blue);
-          }
+        //   & hr {
+        //     background: var(--primary-blue);
+        //   }
 
-          & p {
-            color: white;
-          }
-          &:before {
-            top: 0;
-            transform: scaleX(1);
-            transform-origin: left;
-          }
-        }
+        //   & p {
+        //     color: white;
+        //   }
+        //   &:before {
+        //     top: 0;
+        //     transform: scaleX(1);
+        //     transform-origin: left;
+        //   }
+        // }
 
         & p {
           width: 100%;
@@ -577,8 +577,8 @@
     background-size: cover;
     position: relative;
     flex-wrap: wrap;
-    // border: 2px solid red;
     // align-items: center;
+    position: relative;
 
     &:before {
       content: "";
@@ -591,12 +591,12 @@
     }
 
     & .main {
-      display: grid;
+    display: grid;
       max-width: var(--width-standard);
       //   flex-direction: column;
       grid-template-rows: auto 1fr auto auto;
       grid-auto-rows: auto;
-      border: 1px solid var(--primary-blue-200);
+      // border: 1px solid var(--primary-blue-200);
       gap: 20px;
       padding: 20px;
       width: 300px;
@@ -694,31 +694,39 @@
         transition: transform 0.5s ease 0s;
       }
 
-      &:hover {
-        & h2 {
-          color: var(--primary-blue);
-        }
-        & span {
-          // transform: translateZ(10px);
-          background: var(--primary-blue);
-          transform: rotateY(180deg);
-        }
+      // &:hover {
+      //   & h2 {
+      //     color: var(--primary-blue);
+      //   }
+      //   & span {
+      //     // transform: translateZ(10px);
+      //     background: var(--primary-blue);
+      //     transform: rotateY(180deg);
+      //   }
 
-        & hr {
-          background: var(--primary-blue);
-        }
+      //   & hr {
+      //     background: var(--primary-blue);
+      //   }
 
-        & .items {
-          & p {
-            color: var(--primary-blue);
-          }
-        }
-        &:before {
-          top: 0;
-          transform: scaleX(1);
-          transform-origin: left;
-        }
-      }
+      //   & .items {
+      //     & p {
+      //       color: var(--primary-blue);
+      //     }
+      //   }
+      //   &:before {
+      //     top: 0;
+      //     transform: scaleX(1);
+      //     transform-origin: left;
+      //   }
+      // }
+    }
+
+    & .line {
+      height: 300;
+      width: 1px;
+      background: rgb(153, 146, 146);
+      position: relative;
+      z-index: 4;
     }
   }
 }
