--- a/src/styles/modules/_navbar.scss
+++ b/src/styles/modules/_navbar.scss
@@ -20,9 +20,10 @@
     width: var(--width-standard);
     height: 100%;
     // border: 2px solid blue;
+    justify-content: space-between;
     display: flex;
     align-items: center;
-    padding: 0px 40px;
+    // padding: 0px 40px;
     position: relative;
 
     @media (max-width: $breakpoint-tablet) {
@@ -51,6 +52,7 @@
       gap: 30px;
       // border: 2px solid red;
       width: 100%;
+      max-width: fit-content;
       justify-content: center;
 
       @media (max-width: $breakpoint-tablet) {
