--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -118,9 +118,9 @@
         & a {
           padding: 12px 36px;
           font-size: 1.15rem;
-          border: 2px solid var(--primary-blue-200);
-          border-top-right-radius: 10px;
-          border-bottom-left-radius: 10px;
+          border: 2px solid var(--primary-blue-200); 
+          // border-top-right-radius: 10px;
+          // border-bottom-left-radius: 10px;
           text-transform: capitalize;
           transition: var(--transition);
           width: max-content;
