--- a/src/styles/modules/_section-two.scss
+++ b/src/styles/modules/_section-two.scss
@@ -20,6 +20,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 80px;
 
         @media (max-width: $breakpoint-tablet) {
           display: grid;
@@ -33,13 +34,33 @@
           flex-direction: column;
           // border: 2px solid red;
 
+          & img{
+            width: 100%;
+            height: 100%;
+            max-height: 800px;
+            max-width: 900px;
+          border: 5px solid var(--primary-blue-200);
+          border-radius: 0.25rem;
+          border-bottom-left-radius: 1rem;
+          border-top-right-radius: 1rem;
+        }
+          
+        }
+        .right {
+          // border: 2px solid red;
+          width: fit-content;
+          display: flex;
+          gap: 20px;
+          flex-direction: column;
+          
           & h1 {
             font-size: 3rem;
             letter-spacing: 1.5px;
             line-height: 1.3;
             font-weight: 500;
             text-transform: capitalize;
-            color: var(--primary-blue);
+          width: fit-content;
+          color: var(--primary-blue);
             // color: black;
 
             @media (max-width: $breakpoint-large) {
@@ -54,7 +75,8 @@
             width: 55%;
             font-size: 1.1rem;
             font-weight: 400;
-            opacity: 0.75;
+          width: fit-content;
+          opacity: 0.75;
             text-transform: capitalize;
             // color: var(--primary-blue);
             line-height: 1.2;
@@ -68,14 +90,14 @@
               font-size: 0.7rem;
             }
           }
-        }
-        .right {
+
           & a {
             padding: 12px 36px;
             font-size: 1.15rem;
             border: 2px solid var(--primary-blue);
-            border-top-right-radius: 10px;
-            border-bottom-left-radius: 10px;
+              border-radius: 10px;
+              // border-top-right-radius: 10px;
+            // border-bottom-left-radius: 10px;
             text-transform: capitalize;
             transition: var(--transition);
             width: max-content;
@@ -100,7 +122,6 @@
               background: var(--primary-blue);
               transition: var(--transition);
               color: white;
-              border-radius: 10px;
             }
           }
         }
@@ -208,11 +229,7 @@
             gap: 10px;
             transition: var(--transition-ease);
 
-            &:hover {
-              opacity: 0.8;
-              cursor: pointer;
-              color: white;
-            }
+            
           }
 
           &:before {
@@ -261,6 +278,11 @@
               // right: auto;
               transform: scaleX(1);
               transform-origin: left;
+            }
+
+            & a {
+              cursor: pointer;
+              color: white;
             }
           }
         }
