--- a/src/styles/modules/_services.scss
+++ b/src/styles/modules/_services.scss
@@ -19,6 +19,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: fit-content;
+        margin: 0 auto;
 
         & .left {
           display: flex;
@@ -33,7 +35,7 @@
             text-transform: capitalize;
             color: var(--primary-blue);
             // color: black;
-
+text-align: center;
             @media (max-width: $breakpoint-large) {
               font-size: 2.5rem;
             }
@@ -44,11 +46,14 @@
 
           & p {
             width: 55%;
+            margin: 0 auto;
             font-size: 1.1rem;
             font-weight: 400;
             opacity: 0.75;
             text-transform: capitalize;
-            // color: var(--primary-blue);
+            text-align: center;
+        // width: fit-content;
+        // color: var(--primary-blue);
             line-height: 1.2;
             color: black;
             // text-align: justify;
@@ -116,12 +121,15 @@
             padding: 0;
             font-size: 408px;
             color: white;
-            background: var(--primary-blue);
+            background: var(--primary-blue-200);
             z-index: 3;
             transition: var(--transition-ease);
             width: 408px;
             height: 408px;
             border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             @media (max-width: $breakpoint-large) {
               display: none;
@@ -151,7 +159,7 @@
             flex-direction: column;
             height: 100%;
             // justify-content: space-between;
-            gap: 30px;
+            gap: 20px;
             z-index: 3;
             width: 55%;
 
@@ -258,6 +266,8 @@
         width: 300px;
         height: 200px;
         position: relative;
+        justify-content: center;
+        
 
         @media (max-width: $breakpoint-large) {
           padding: 18px;
@@ -286,22 +296,22 @@
           transition: transform 0.5s ease 0s;
         }
 
-        &:hover {
-          & span {
-            color: var(--primary-blue);
-          }
-          & p {
-            color: var(--primary-blue);
-          }
+        // &:hover {
+        //   & span {
+        //     color: var(--primary-blue);
+        //   }
+        //   & p {
+        //     color: var(--primary-blue);
+        //   }
 
-          &:before {
-            top: 0;
-            // left: 0;
-            // right: auto;
-            transform: scaleX(1);
-            transform-origin: left;
-          }
-        }
+        //   &:before {
+        //     top: 0;
+        //     // left: 0;
+        //     // right: auto;
+        //     transform: scaleX(1);
+        //     transform-origin: left;
+        //   }
+        // }
 
         & span {
           font-size: 40px;
