--- a/src/styles/modules/_section-three.scss
+++ b/src/styles/modules/_section-three.scss
@@ -121,6 +121,7 @@
           border: 2px solid var(--primary-blue-200); 
           // border-top-right-radius: 10px;
           // border-bottom-left-radius: 10px;
+          border-radius: 10px;
           text-transform: capitalize;
           transition: var(--transition);
           width: max-content;
