--- a/src/styles/modules/_section-four.scss
+++ b/src/styles/modules/_section-four.scss
@@ -9,7 +9,7 @@
     position: relative;
 
     & .content-center {
-      border: 2px solid blue;
+      // border: 2px solid blue;
       gap: 50px;
       max-width: var(--width-standard);
       display: flex;
@@ -30,8 +30,9 @@
         padding: 12px 36px;
         font-size: 1.15rem;
         border: 2px solid var(--primary-blue);
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 10px;
+        // border-top-right-radius: 10px;
+        // border-bottom-left-radius: 10px;
+        border-radius: 10px;
         text-transform: capitalize;
         transition: var(--transition);
         width: max-content;
@@ -76,7 +77,7 @@
     }
 
     & .content {
-      border: 2px solid blue;
+      // border: 2px solid blue;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 30px;
